@@ -8,7 +8,7 @@ project(Minimum_Base_Sender_idl_gen) : componentidldefaults {
               -Wb,skel_export_macro=SENDER_SVNT_Export \
               -Wb,skel_export_include=Sender_svnt_export.h \
               -Wb,exec_export_macro=SENDER_EXEC_Export \
-              -Wb,exec_export_include=Sender_exec_export.h \
+              -Wb,exec_export_include=Sender_exec_export.h
 
   IDL_Files {
     Sender.idl
