@@ -1,3 +1,12 @@
+Tue Oct  5 12:22:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Deployment/Handlers/Connection_Handler.h:
+        * ciao/Deployment/Handlers/Connection_Handler.cpp:
+          Added disconnect_local_facet
+
+        * tests/Minimum/Sender/Sender.mpc:
+          Cleanup
+
 Tue Oct  5 11:27:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * ciao/Deployment/Handlers/Connection_Handler.h:
